--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -1146,7 +1146,7 @@ The Standard Translation algorithm consists of the following recursive rewrite r
 	ST(x, p) &= P(x) \\
 	ST(x, \bot) &= (x \neq x) \\
 	ST(x, \tlnot\varphi) &=\ \sim(ST(x, \varphi)) \\
-	ST(x, \varphi \tlor \psi) &= ST(x, \varphi) \mathtt{\ or\ } ST(x, \psi)\\
+	ST(x, \varphi \tlor \psi) &= ST(x, \varphi) + ST(x, \psi)\\
 	ST(x, \Kns{i}\varphi) &= \forall y,\ \Rel{k}^i(x,y) \Longrightarrow ST(y, \varphi) \\
 	\end{align*}	
 \end{definition}
@@ -1168,18 +1168,18 @@ The Sahlqvist-van Benthem algorithm is described in the following way.
 
 \emph{Step 1.} Apply the following equivalences, from left to right, (in this order):
 \begin{eqnarray}
-(\exists x, \varPhi(x) \mathtt{\ and\ }\psi )\Longleftrightarrow \exists x, (\varPhi(x) \mathtt{\ and\ }\psi)\\
+(\exists x, \varPhi(x) \cdot\psi )\Longleftrightarrow \exists x, (\varPhi(x) \cdot\psi)\\
 (\exists x, \varPhi(x) \Longrightarrow \psi) \Longleftrightarrow \forall x, (\varPhi(x) \Longrightarrow \psi),
 \end{eqnarray}
 where $\varPhi(x)$ is a sentence with one free variable $x$.
 
-\emph{Step 2.} Construct minimal valuations for each proposition letter instance. Proposition letter instances are converted to predicates over variables. Our intuitive interpretation is that the variables are worlds from the frame. An appropriate lambda function can be created for each predicate such that the smallest frame possible validates it. For a proposition letter $p$ appearing once in a formula, either as an atom or behind a diamond (\emph{e.g. $\BPoss{i}p$}), $\lambda u.u=x$ is created, assuming $x$ is the appropriate variable appearing in second order translation $P(x)$. 
+\emph{Step 2.} Construct minimal valuations. For each proposition letter instance in the formula's antecedent, select a minimal valuation that makes the antecedent true, then combine them as a lambda function over a disjunction of them. Proposition letter instances are converted to predicates over variables. The resulting formula will quantify over these variables, so they must be distinct from the free variable in the standard translation. Our intuitive interpretation is that the variables are worlds from the frame. An appropriate lambda function can be created for each predicate such that the smallest frame possible validates it. For a proposition letter $p$ appearing once in a formula, either as an atom or behind a diamond (\emph{e.g. $\BPoss{i}p$}), $\lambda u.u=x_1$ is created, assuming $x_1$ is the bound variable appearing in second order translation $\forall P,\forall x_1,(\Rel{b}^i(x,x_1)\cdot P(x_1))$. 
 
-If $p$ appears twice, either as an atom or behind a diamond, each instance appears in the translated sentence in some form like $\exists x_1(\Rel{b}^i(w,x_1) \mathtt{\ and\ } P(x_1))$ (for diamonds) $... \mathtt{\ and\ }P(x_2)$. The lambda function to serve as $P$'s instance is $\lambda u.(u=x_1 \text{\ or\ }u=x_2)$. For more than two appearances as atoms or behind diamonds, this pattern is repeated.
+If $p$ appears twice in the antecedent, either as an atom or behind a diamond, each instance appears in the translated sentence in some form like $\exists x_1(\Rel{b}^i(w,x_1) \cdot P(x_1))$ (for diamonds) $... \cdot P(x_2)$. The lambda function to serve as $P$'s instance is $\lambda u.(u=x_1 + u=x_2)$. For more than two appearances as atoms or behind diamonds, this pattern is repeated.
 
 For proposition letters behind boxes (\emph{e.g.} $\Bels{i}p$), lambda functions of the form $\lambda u.(\bigvee_{j=0}^n (\Rel{b}^i(x_j,u)))$ are used, for the number of proposition letters $n$ in the formula. When a proposition letter appears behind boxes and atomically, the atomic instances use the $=$ relation in the lambda function.
 
-\emph{Step 3.} Perform the instantiations. This step substitutes the predicate variables for the minimal valuations constructed in \emph{Step 2}. For example, if $P(x)$ appears in the second order formula, with the minimal valuation substitution $\lambda u.u=x$, the instantiated predicate instance yields the sentence $(\lambda u.u=x_1)(x)$, which beta reduces to $x=x_1$. If the proposition letter instance appears behind a box in the modal formula, \emph{e.g.} $\Bels{i}p$, the second order formula is $\forall y(\Rel{b}^i(x_1, y) \mathtt{\ implies\ }P(y))$ with the lambda function $\lambda u.(\Rel{b}^i(x_1, u))$, which yields the formula  $\forall y(\Rel{b}^i(x_1, y) \mathtt{\ implies\ }\lambda u.(\Rel{b}^i(y, x_1)))(y)$. This beta reduces to $\forall y(\Rel{b}^i(x_1, y) \mathtt{\ implies\ }\Rel{b}^i(x_1, y))$, which is equivalent to $\forall y, \Rel{b}^i(x_1, y)$. For examples, see Blackburn \etal\cite{modal} chapter 3.
+\emph{Step 3.} Perform the instantiations. This step substitutes the predicate variables for the minimal valuations constructed in \emph{Step 2}. For example, if $P(x_1)$ appears in the second order formula's antecedent as a singular instance of $P$, with the minimal valuation substitution $\lambda u.u=x_1$, the instantiated predicate instance yields the sentence $(\lambda u.u=x_1)(x_1)$, which beta reduces to $x+1=x_1$. If the proposition letter instance appears behind a box in the modal formula, \emph{e.g.} $\Bels{i}p$, the second order formula is $\forall y(\Rel{b}^i(x_1, y) \Longrightarrow P(y))$ with the lambda function $\lambda u.(\Rel{b}^i(x_1, u))$, which yields the formula  $\forall y(\Rel{b}^i(x_1, y) \Longrightarrow \lambda u.(\Rel{b}^i(y, x_1)))(y)$. This beta reduces to $\forall y(\Rel{b}^i(x_1, y) \Longrightarrow \Rel{b}^i(x_1, y))$, which is equivalent to $\forall y, \Rel{b}^i(x_1, y)$. For examples, see Blackburn \etal\cite{modal} chapter 3.
 
 The result is a first order logic frame condition corresponding to the axiom schema. We apply this algorithm to each \DASL\ axiom schema and show that it is equivalent to the frame condition used to prove soundness.
 
@@ -1190,7 +1190,9 @@ The result is a first order logic frame condition corresponding to the axiom sch
 where \emph{hold} refers to frame validity and metalanguage semantics, respectively.
 \begin{proof}
 	$\\$
-	$\Kns{i}p \iimplies p$. Applying the above translation rules, where the normal equivalence of $\sim q \mathtt{\ or\ }r\equiv q \Longrightarrow r$, yields $(\forall y,\ \Rel{k}^i(x,y) \Longrightarrow P(y)) \Longrightarrow P(x)$.
+	$\Kns{i}p \iimplies p$. Applying the Standard Translation rules yields $\forall P(\forall y,\ \Rel{k}^i(x,y) \Longrightarrow P(y)) \Longrightarrow P(x)$. We have a single predicate with one instance in the antecedent behind a box. This yields the lambda function $\lambda u.(\Rel{k}^i(x,u))$. We substitute this instance of $P$ into the formula to yield:\\
+	$\forall y, ((\Rel{k}^i(x,y)\Longrightarrow \lambda u.(\Rel{k}^i(x,u))(y))\Longrightarrow \lambda u.(\Rel{k}^i(x,u))(x))$, which beta reduces and simplifies to:\\
+	$\forall y, (\Rel{k}^i(x,y)\Longrightarrow \Rel{k}^i(x,x))$.
 \end{proof}
 
 
